---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\nrecord Cat {\n  Cat(String, cuteness: Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(cuteness: y, ..) = cat\n  let Cat(x, cuteness: y) = cat\n  x\n}\n\n"
---
import { CustomType as $CustomType } from "../rakun.mjs";

class Cat extends $CustomType {
  constructor(x0, cuteness) {
    super();
    this[0] = x0;
    this.cuteness = cuteness;
  }
}

function go(cat) {
  let x = cat[0];
  let y = cat.cuteness;
  let y$1 = cat.cuteness;
  let x$1 = cat[0];
  let y$2 = cat.cuteness;
  return x$1;
}
